ふぁいるの作成

--- a/Shooting Game/Shooting Game.vcxproj
+++ b/Shooting Game/Shooting Game.vcxproj
@@ -20,21 +20,31 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractScene.h" />
+    <ClInclude Include="Bullet.h" />
+    <ClInclude Include="BulletsSpawner.h" />
     <ClInclude Include="CharaBase.h" />
     <ClInclude Include="EndScene.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameMain.h" />
     <ClInclude Include="InputKey.h" />
+    <ClInclude Include="NwaySpawner.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="ResultScene.h" />
     <ClInclude Include="SceneManeger.h" />
     <ClInclude Include="SphereCollider.h" />
     <ClInclude Include="TitleScene.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="BulletsSpawner.cpp" />
     <ClCompile Include="CharaBase.cpp" />
     <ClCompile Include="EndScene.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="InputKey.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NwaySpawner.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="ResultScene.cpp" />
     <ClCompile Include="SceneManeger.cpp" />
     <ClCompile Include="SphereCollider.cpp" />
