--- a/Shooting Game/Shooting Game.vcxproj
+++ b/Shooting Game/Shooting Game.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="InputKey.h" />
     <ClInclude Include="NwaySpawner.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Ranking.h" />
     <ClInclude Include="ResultScene.h" />
     <ClInclude Include="SceneBase.h" />
     <ClInclude Include="SceneManeger.h" />
@@ -47,6 +48,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NwaySpawner.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Ranking.cpp" />
     <ClCompile Include="ResultScene.cpp" />
     <ClCompile Include="SceneBase.cpp" />
     <ClCompile Include="SceneManeger.cpp" />
